--- a/book/design/steel/steel_structures.ipynb
+++ b/book/design/steel/steel_structures.ipynb
@@ -13,6 +13,7 @@
     "---\n",
     "Rolled and welded H- and U-sections\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "single storey:  \n",
     "$h_{st} = 2$ to $8$ m  \n",
     "$d = h_{st}/20$ to $h_{st}/25$  \n",
@@ -20,13 +21,14 @@
     "multi storey:  \n",
     "$h_{st} = 2$ to $4$ m  \n",
     "$d = h_{st}/7$ to $h_{st}/18$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Steel_Columns2.jpg \n",
     "--- \n",
     "---\n",
     "Hollow sections\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "single storey:  \n",
     "$h_{st} = 2$ to $8$ m  \n",
     "$d = h_{st}/20$ to $h_{st}/35$  \n",
@@ -34,16 +36,17 @@
     "multi storey:  \n",
     "$h_{st} = 2$ to $4$ m  \n",
     "$d = h_{st}/7$ to $h_{st}/28$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Steel_Columns3.jpg \n",
     "--- \n",
     "---\n",
-    "Casted-in and concrete-filled columns always contain extra reinforcement\n",
+    "Cast-in and concrete-filled columns always contain extra reinforcement\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$h_{st} = 2$ to $4$ m  \n",
     "$d = h_{st}/6$ to $h_{st}/15$  \n",
-    "\n",
+    "``` \n",
     "------------------------------------------------------- \n",
     "### Main floorbeams\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
@@ -51,40 +54,44 @@
     "---\n",
     "Wide flange (H) sections and hollow sections.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 4$ to $12$ m  \n",
     "$h = 100$ to $500$ mm  \n",
     "$h = L/18$ to $L/28$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Main_Floorbeams2.jpg\n",
     "--- \n",
     "---\n",
     "I- and U-sections as main beams.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 6$ to $30$ m  \n",
     "$h = 200$ to $500$ mm  \n",
     "$h = L/15$ to $L/20$\n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Main_Floorbeams3.jpg\n",
     "--- \n",
     "---\n",
     "Truss beam.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 12$ to $45$ m  \n",
     "$h = 1000$ to $4000$ mm  \n",
     "$h = L/8$ to $L/15$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Main_Floorbeams4.jpg\n",
     "--- \n",
     "---\n",
     "Top hat beams with added compression layer, with or without shear connections.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 7$ to $15$ m  \n",
     "$h = 300$ to $1000$ mm  \n",
     "$h = L/20$ to $L/25$\n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "### Floors\n",
     "```{figure} Images/Composite_Floors.jpg\n",
@@ -92,10 +99,11 @@
     "---\n",
     "Composite floor with extra reinforcement.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 2$ to $4$ m  \n",
     "$h = 100$ to $150$ mm  \n",
     "$h = L/25$ to $L/30\n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "### Main roofbeams\n",
     "```{figure} Images/Roofbeams1.jpg\n",
@@ -103,48 +111,53 @@
     "---\n",
     "Wide flange (H) sections and hollow sections.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 6$ to $14$ m  \n",
     "$h = 100$ to $500$ mm  \n",
     "$h = L/20$ to $L/30$ \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Roofbeams2.jpg\n",
     "--- \n",
     "---\n",
     "Truss made of cold formed sections.\n",
     "```\n",
+    "```{admonition} Rules of thumb\n",
     "$L = 12$ to $75$ m  \n",
     "$h = L/10$ to $L/18$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Roofbeams3.jpg\n",
     "--- \n",
     "---\n",
     "Truss made of formed sections.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 5$ to $28$ m  \n",
     "$h = 300$ to $1000$ mm  \n",
     "$h = L/15$ to $L/25$ \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Roofbeams4.jpg\n",
     "--- \n",
     "---\n",
     "Truss made of hot rolled sections\n",
     "``` \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 8$ to $20$ m  \n",
     "$h = 300$ to $1000$ mm  \n",
     "$h = L/5$ to $L/10$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Roofbeams5.jpg\n",
     "--- \n",
     "---\n",
     "Space frame made of hot rolled sections.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 30$ to $150$ m  \n",
     "$h = L/15$ to $L/30$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "### Purlins roofstructures\n",
     "```{figure} Images/Purlins1.jpg\n",
@@ -152,20 +165,22 @@
     "---\n",
     "Steel purlin roofstructure.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 3$ to $12$ m  \n",
     "$h = 120$ to $300$ mm  \n",
     "$h = L/25$ to $L/35$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Purlins2.jpg\n",
     "---\n",
     "---\n",
     "Steel purlins roofstructure.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 6$ to $40$ m  \n",
     "$h = 200$ to $1000$ mm  \n",
     "$h = L/18$ to $L/26$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "\n",
     "### Roofing plates\n",
@@ -174,19 +189,22 @@
     "---\n",
     "Cold formed corrugated steel roofing plate.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L= 2$ to $6$ m  \n",
     "$h = 25$ to $120$ mm  \n",
     "$h = L/40$ to $L/70$  \n",
-    "\n",
+    "```\n",
     "------------------------------------------------------- \n",
     "```{figure} Images/Roofing_Plate2.jpg\n",
     "---\n",
     "---\n",
     "Cold formed corrugated steel sandwich panel with foam core.\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "$L = 2$ to $3$ m  \n",
     "$h = 75$ to $150$ mm  \n",
-    "$h = L/25$ to $L/30$  \n"
+    "$h = L/25$ to $L/30$  \n",
+    "```"
    ]
   }
  ],
