--- a/book/design/concrete/spans_in_concrete.ipynb
+++ b/book/design/concrete/spans_in_concrete.ipynb
@@ -21,6 +21,7 @@
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "Single span (beam on two support points)  \n",
     "$L = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
@@ -30,7 +31,7 @@
     "Multiple spans (continuous beam on 3 or more support points)  \n",
     "$h = L/10$ to $L/15$  \n",
     "$b = h/3$ to $h/2$  \n",
-    "\n",
+    "```\n",
     "-------------------------------------------------------  \n",
     "```{figure} Images/Prestressed_Floorbeams.jpg\n",
     "--- \n",
@@ -38,6 +39,7 @@
     "---\n",
     "Rectangular beams in cast on-site, prestressed concrete\n",
     "```  \n",
+    "```{admonition} Rules of thumb\n",
     "Single span (beam on two support points)  \n",
     "$L$: same  \n",
     "$h$: same  \n",
@@ -47,7 +49,7 @@
     "Multiple spans (continuous beam on 3 or more support points)  \n",
     "$h = L/17$ to $L/22$  \n",
     "$b = h/4$ to $h/3$  \n",
-    "\n",
+    "```\n",
     "-------------------------------------------------------"
    ]
   }
