--- a/book/design/concrete/C06_hollow_core_slabs.ipynb
+++ b/book/design/concrete/C06_hollow_core_slabs.ipynb
@@ -290,7 +290,33 @@
     "### Connections (All types of hollow core slabs)\n",
     "\n",
     "```{figure} Images/Integrated_Beams.jpg\n",
+    "---\n",
+    "---\n",
+    "Cross-sections of connection to integrated steel or concrete beams\n",
     "```\n",
+    "\n",
+    "```{figure} Images/Laan_op_Zuid_Rdam_01.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
+    "Overview photo of floor field with hollow core slabs: mind the double openings for connections at the ends of each slab and the reinforced strip to transfer wind loads\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/Laan_op_Zuid_Rdam_02.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
+    "Detail of one hollow core slab connected to steel delta-beam\n",
+    "```\n",
+    "\n",
+    "```{figure} Images/Laan_op_Zuid_Rdam_03.jpg\n",
+    "---\n",
+    "scale: 25%\n",
+    "---\n",
+    "Detail of cut-out in hollow core slab to connect to steel delta-beam via reinforcement bar welded to beam\n",
+    "```\n",
+    "\n",
+    "\n",
     "\n",
     "[^1]: [VBI.nl](https://www.vbi.nl/): Hollow core slabs and system floors.\n",
     "[^2]: [Dycore.nl](https://www.dycore.nl/): Different floor systems. CAD drawings and details can be downloaded. Design graphs are available."
