--- a/book/design/concrete/C06_hollow_core_slabs.ipynb
+++ b/book/design/concrete/C06_hollow_core_slabs.ipynb
@@ -297,23 +297,23 @@
     "\n",
     "```{figure} Images/Laan_op_Zuid_Rdam_01.jpg\n",
     "---\n",
-    "scale: 25%\n",
+    "scale: 15%\n",
     "---\n",
     "Overview photo of floor field with hollow core slabs: mind the double openings for connections at the ends of each slab and the reinforced strip to transfer wind loads\n",
     "```\n",
     "\n",
     "```{figure} Images/Laan_op_Zuid_Rdam_02.jpg\n",
     "---\n",
-    "scale: 25%\n",
+    "scale: 15%\n",
     "---\n",
     "Detail of one hollow core slab connected to steel delta-beam\n",
     "```\n",
     "\n",
     "```{figure} Images/Laan_op_Zuid_Rdam_03.jpg\n",
     "---\n",
-    "scale: 25%\n",
+    "scale: 15%\n",
     "---\n",
-    "Detail of cut-out in hollow core slab to connect to steel delta-beam via reinforcement bar welded to beam\n",
+    "Detail of milled cut-out slot in hollow core slab to allow connection of steel delta-beam via reinforcement bar welded to beam\n",
     "```\n",
     "\n",
     "\n",
