--- a/book/design/concrete/C11_3d_connections.ipynb
+++ b/book/design/concrete/C11_3d_connections.ipynb
@@ -24,11 +24,7 @@
     "    <iframe src=\"../../_static/Connection_Concrete_HollowCore.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
     "</div>\n",
     "\n",
-    "Or download the file [here](../../_static/Connection_Concrete_HollowCore.html) and open it in your web browser.\n",
-    "\n",
-    "<div style=\"text-align: center;\">\n",
-    "    <iframe src=\"https://threejs.org/manual/examples/load-gltf-shadows.html\" width=\"750\" height=\"750\" frameborder=\"0\"></iframe>\n",
-    "</div>\n"
+    "Or download the file [here](../../_static/Connection_Concrete_HollowCore.html) and open it in your web browser."
    ]
   }
  ],
