aanvulling beton vuisteregels

--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -8,22 +8,33 @@
     "## Rules of thumb\n",
     "These 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, based on span $L$ and/or center-to-center spacing $s$. These *estimated* dimensions should only serve as input for an early design stage calculation (e.g. first check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected. They are just meant to get your design started.\n",
     "\n",
+    "### Beam dimensions\n",
+    "\n",
     "```{figure} Images/Main_Floorbeams1.jpg\n",
     "--- \n",
     "scale: 50%\n",
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
+    "```{figure} Images/Main_Floorbeams_Height_RoTh.jpg\n",
+    "--- \n",
+    "scale: 50%\n",
+    "---\n",
+    "Rules of thumb, traditionally reinforced concrete (= no prestress)\n",
+    "```  \n",
     "```{admonition} Rules of thumb\n",
-    "Single span (beam on two support points)  \n",
+    "Single span (beam on two support points, case a)  \n",
     "$L = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
     "$h = L/12$ to $L/8$  \n",
     "$b = h/3$ to $h/2$  \n",
     "\n",
-    "Multiple spans (continuous beam on 3 or more support points)  \n",
+    "Multiple spans (continuous beam on 3 support points, case b)  \n",
     "$h = L/15$ to $L/10$  \n",
-    "$b = h/3$ to $h/2$  \n",
+    "\n",
+    "Multiple spans (continuous beam on 4 support points or more, case c)  \n",
+    "$h = L/15$  \n",
+    "\n",
     "```\n",
     "-------------------------------------------------------  \n",
     "```{figure} Images/Prestressed_Floorbeams.jpg\n",
@@ -43,7 +54,12 @@
     "$h = L/22$ to $L/17$  \n",
     "$b = h/4$ to $h/3$  \n",
     "```\n",
-    "-------------------------------------------------------"
+    "-------------------------------------------------------\n",
+    "\n",
+    "### Reinforcement\n",
+    "NB: only for first estimation - later check $\\rho_{min}$ and $\\rho_{max}$ !  \n",
+    "\n",
+    "$A_s = \\frac{M_d}{0.4d}$"
    ]
   }
  ],
