aanvulling beton vuistregels (2)

--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -18,7 +18,7 @@
     "```  \n",
     "```{figure} Images/Main_Floorbeams_Height_RoTh.jpg\n",
     "--- \n",
-    "scale: 50%\n",
+    "scale: 100%\n",
     "---\n",
     "Rules of thumb, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
@@ -59,7 +59,45 @@
     "### Reinforcement\n",
     "NB: only for first estimation - later check $\\rho_{min}$ and $\\rho_{max}$ !  \n",
     "\n",
-    "$A_s = \\frac{M_d}{0.4d}$"
+    "```{figure} Images/Main_Floorbeams_h_d_z.jpg\n",
+    "--- \n",
+    "scale: 50%\n",
+    "---\n",
+    "Height h, effective height d and lever arm height z\n",
+    "```  \n",
+    "**Method 1 - use earlier estimated height h - 'quick and dirty'**  \n",
+    "\n",
+    "$d \\approx 0.9 h$  \n",
+    "$z \\approx 0.9 d \\approx 0.81 h$  \n",
+    "\n",
+    "$A_{s;required} \\approx \\frac{N_s}{f_{yd}} = \\frac{M_{Ed}}{z \\cdot f_{yd}} =  \\frac{M_{Ed}}{0.81 \\cdot h \\cdot {435}} = \\frac{M_{Ed}}{352 \\cdot h} \\frac{[Nm]}{[m]}$  \n",
+    "\n",
+    "$A_{s;required} \\approx \\frac{M_{Ed}}{0.35 \\cdot h} \\frac{[kNm]}{[m]}$\n",
+    "\n",
+    "NB mind the units: $M_{Ed}$ in **kNm** and $h$ in m!  \n",
+    "\n",
+    "**Method 2 - adjust h based on calculated bending moment and $\\rho=1$%**   \n",
+    "\n",
+    "step 1: estimate $h$ and $b$ using rules of thumb above  \n",
+    "\n",
+    "step 2: calculate $M_{Ed}$ based on now available self weight and other loads  \n",
+    "\n",
+    "step 3: adjust $d$ aiming for 1% reinforcement (=percentage considered economical optimum)  \n",
+    "&nbsp;&nbsp; $\\frac{M_{Ed}}{b \\cdot d^2} \\le 4000$ (based on 1% bending tensile reinforcement)  \n",
+    "&nbsp;&nbsp; $\\Leftrightarrow b \\cdot d^2 \\ge \\frac{M_{Ed}}{4000}$  \n",
+    "&nbsp;&nbsp; with $b \\approx 0.5 \\cdot d$:  \n",
+    "&nbsp;&nbsp; $\\Rightarrow 0.5 \\cdot d^3 \\ge \\frac{M_{Ed}}{4000}\\Leftrightarrow d^3 \\ge \\frac{M_{Ed}}{2000}$  \n",
+    "&nbsp;&nbsp; solve $d$\n",
+    "\n",
+    "step 4: calculate $A_{s;requ}$ (which should indeed be $ \\approx$ 1%)  \n",
+    "&nbsp;&nbsp; $z \\approx 0.9 d $  \n",
+    "&nbsp;&nbsp; $A_{s;required} = \\frac{M_{Ed}}{z \\cdot f_{yd}}$  \n",
+    "\n",
+    "step 5: adjust $h$ based on $d$  \n",
+    "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover and bar diameters\n",
+    "\n",
+    "step 6: iterate from step 2 onwards if needed (changing h leads to small change in self weight)\n",
+    "\n"
    ]
   }
  ],
