--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -18,7 +18,7 @@
     "```  \n",
     "```{figure} Images/Main_Floorbeams_Height_RoTh.jpg\n",
     "--- \n",
-    "scale: 100%\n",
+    "scale: 90%\n",
     "---\n",
     "Rules of thumb, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
@@ -84,14 +84,16 @@
     "\n",
     "step 3: adjust $d$ aiming for 1% reinforcement (=percentage considered economical optimum)  \n",
     "&nbsp;&nbsp; $\\frac{M_{Ed}}{b \\cdot d^2} \\le 4000$ (based on 1% bending tensile reinforcement)  \n",
+    "&nbsp;&nbsp; (also here $M_{Ed}$ in kNm and $b$ and $d$ in m)  \n",
     "&nbsp;&nbsp; $\\Leftrightarrow b \\cdot d^2 \\ge \\frac{M_{Ed}}{4000}$  \n",
     "&nbsp;&nbsp; with $b \\approx 0.5 \\cdot d$:  \n",
     "&nbsp;&nbsp; $\\Rightarrow 0.5 \\cdot d^3 \\ge \\frac{M_{Ed}}{4000}\\Leftrightarrow d^3 \\ge \\frac{M_{Ed}}{2000}$  \n",
-    "&nbsp;&nbsp; solve $d$\n",
+    "&nbsp;&nbsp; solve $d = \\sqrt[3]{\\frac{M_{Ed}}{2000}}$\n",
     "\n",
-    "step 4: calculate $A_{s;requ}$ (which should indeed be $ \\approx$ 1%)  \n",
+    "step 4: calculate $A_{s;required}$ (which should indeed be $ \\approx$ 1%)  \n",
     "&nbsp;&nbsp; $z \\approx 0.9 d $  \n",
-    "&nbsp;&nbsp; $A_{s;required} = \\frac{M_{Ed}}{z \\cdot f_{yd}}$  \n",
+    "&nbsp;&nbsp; $N_s = N_c = \\frac{M_{Ed}}{z} \\frac{[kNm]}{[m]}$  \n",
+    "&nbsp;&nbsp; $A_{s;required} = \\frac{N_s}{f_{yd}} \\frac{[N]}{[N/mm^2]}$  \n",
     "\n",
     "step 5: adjust $h$ based on $d$  \n",
     "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover and bar diameters\n",
