aanvulling beton vuiustregels (4)

--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -16,7 +16,7 @@
     "---\n",
     "Rectangular beams in cast on-site, traditionally reinforced concrete (= no prestress)\n",
     "```  \n",
-    "```{figure} Images/Main_Floorbeams_Height_RoTh.jpg\n",
+    "```{figure} Images/Main_Floorbeams_Height_RoTh_60.jpg\n",
     "--- \n",
     "scale: 90%\n",
     "---\n",
@@ -96,10 +96,16 @@
     "&nbsp;&nbsp; $A_{s;required} = \\frac{N_s}{f_{yd}} \\frac{[N]}{[N/mm^2]}$  \n",
     "\n",
     "step 5: adjust $h$ based on $d$  \n",
-    "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover and bar diameters\n",
-    "\n",
+    "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover c + 0.5 main reinforcement diameter + stirrup diameter:  \n",
+    "&nbsp;&nbsp; $h = d + c + 0.5 \\cdot $ &#8960;$_{main}+ $ &#8960;$_{stirrup}$  \n",
     "step 6: iterate from step 2 onwards if needed (changing h leads to small change in self weight)\n",
-    "\n"
+    "\n",
+    "```{figure} Images/van_h_naar_d.jpg\n",
+    "--- \n",
+    "scale: 75%\n",
+    "---\n",
+    "Going from h to d\n",
+    "```  \n"
    ]
   }
  ],
