--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "### Beam dimensions\n",
     "\n",
-    "```{figure} Images/Main_Floorbeams1.jpg\n",
+    "```{figure} Images/Main_Floorbeams0.jpg\n",
     "--- \n",
     "scale: 50%\n",
     "---\n",
@@ -56,7 +56,7 @@
     "```\n",
     "-------------------------------------------------------\n",
     "\n",
-    "### Reinforcement\n",
+    "### Reinforcement estimation - two methods\n",
     "NB: only for first estimation - later check $\\rho_{min}$ and $\\rho_{max}$ !  \n",
     "\n",
     "```{figure} Images/Main_Floorbeams_h_d_z.jpg\n",
@@ -65,7 +65,7 @@
     "---\n",
     "Height h, effective height d and lever arm height z\n",
     "```  \n",
-    "**Method 1 - use earlier estimated height h - 'quick and dirty'**  \n",
+    "**Method 1 - use estimated height h - 'quick and dirty'**  \n",
     "\n",
     "$d \\approx 0.9 h$  \n",
     "$z \\approx 0.9 d \\approx 0.81 h$  \n",
@@ -98,14 +98,18 @@
     "step 5: adjust $h$ based on $d$  \n",
     "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover c + 0.5 main reinforcement diameter + stirrup diameter:  \n",
     "&nbsp;&nbsp; $h = d + c + 0.5 \\cdot $ &#8960;$_{main}+ $ &#8960;$_{stirrup}$  \n",
-    "step 6: iterate from step 2 onwards if needed (changing h leads to small change in self weight)\n",
     "\n",
     "```{figure} Images/van_h_naar_d.jpg\n",
     "--- \n",
     "scale: 75%\n",
     "---\n",
     "Going from h to d\n",
-    "```  \n"
+    "```  \n",
+    "\n",
+    "step 6: iterate from step 2 onwards  \n",
+    "&nbsp;&nbsp;  only if needed  \n",
+    "&nbsp;&nbsp;  change in h leads to change in self weight G  \n",
+    "&nbsp;&nbsp;  if G is large contributor to ULS load  "
    ]
   }
  ],
