--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -56,8 +56,10 @@
     "```\n",
     "-------------------------------------------------------\n",
     "\n",
-    "### Reinforcement estimation - two methods\n",
-    "NB: only for first estimation - later check $\\rho_{min}$ and $\\rho_{max}$ !  \n",
+    "### Beam bending reinforcement estimation - two methods\n",
+    "&nbsp;&nbsp;- only for first estimation - later check $\\rho_{min}$ and $\\rho_{max}$ !  \n",
+    "&nbsp;&nbsp;- for traditionally reinforced, not for prestressed concrete  \n",
+    "&nbsp;&nbsp;- shear reinforcement not discussed here  \n",
     "\n",
     "```{figure} Images/Main_Floorbeams_h_d_z.jpg\n",
     "--- \n",
@@ -65,7 +67,7 @@
     "---\n",
     "Height h, effective height d and lever arm height z\n",
     "```  \n",
-    "**Method 1 - use estimated height h - 'quick and dirty'**  \n",
+    "**Method 1: 'quick and dirty' - use estimated height h**  \n",
     "\n",
     "$d \\approx 0.9 h$  \n",
     "$z \\approx 0.9 d \\approx 0.81 h$  \n",
@@ -75,8 +77,9 @@
     "$A_{s;required} \\approx \\frac{M_{Ed}}{0.35 \\cdot h} \\frac{[kNm]}{[m]}$\n",
     "\n",
     "NB mind the units: $M_{Ed}$ in **kNm** and $h$ in m!  \n",
+    "This method can be used to verify if your chosen beam dimensions make sense. Check if $A_s$ fits nicely in the cross-section and is proportional.\n",
     "\n",
-    "**Method 2 - adjust h based on calculated bending moment and $\\rho=1$%**   \n",
+    "**Method 2: more accurate - adjust h based on calculated bending moment and $\\rho=1$%**   \n",
     "\n",
     "step 1: estimate $h$ and $b$ using rules of thumb above  \n",
     "\n",
@@ -92,8 +95,9 @@
     "\n",
     "step 4: calculate $A_{s;required}$ (which should indeed be $ \\approx$ 1%)  \n",
     "&nbsp;&nbsp; $z \\approx 0.9 d $  \n",
-    "&nbsp;&nbsp; $N_s = N_c = \\frac{M_{Ed}}{z} \\frac{[kNm]}{[m]}$  \n",
-    "&nbsp;&nbsp; $A_{s;required} = \\frac{N_s}{f_{yd}} \\frac{[N]}{[N/mm^2]}$  \n",
+    "&nbsp;&nbsp; $N_s = N_c = \\frac{M_{Ed}}{z} \\frac{[kNm]}{[m]} = [kN]$  \n",
+    "&nbsp;&nbsp; $A_{s;required} = \\frac{N_s}{f_{yd}} \\frac{[N]}{[N/mm^2]} = [mm^2]$  \n",
+    "&nbsp;&nbsp; also here mind the unit changes\n",
     "\n",
     "step 5: adjust $h$ based on $d$  \n",
     "&nbsp;&nbsp; adjust $h$ based on $d$ + concrete cover c + 0.5 main reinforcement diameter + stirrup diameter:  \n",
@@ -107,9 +111,11 @@
     "```  \n",
     "\n",
     "step 6: iterate from step 2 onwards  \n",
-    "&nbsp;&nbsp;  only if needed  \n",
-    "&nbsp;&nbsp;  change in h leads to change in self weight G  \n",
-    "&nbsp;&nbsp;  if G is large contributor to ULS load  "
+    "&nbsp;&nbsp;  - only if needed  \n",
+    "&nbsp;&nbsp;  - change in h leads to change in self weight G  \n",
+    "&nbsp;&nbsp;  - iteration only needed if G is proportionally a large contributor to ULS load  \n",
+    "\n",
+    "For shear reinforcement, prestressed concrete and further verification: use Eurocode"
    ]
   }
  ],
