--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -115,7 +115,42 @@
     "&nbsp;&nbsp;  - change in h leads to change in self weight G  \n",
     "&nbsp;&nbsp;  - iteration only needed if G is proportionally a large contributor to ULS load  \n",
     "\n",
-    "For shear reinforcement, prestressed concrete and further verification: use Eurocode"
+    "For shear reinforcement, prestressed concrete and further verification: use Eurocode\n",
+    "\n",
+    "### Floor thickness estimation (cast in-site)\n",
+    "\n",
+    "\n",
+    "```{figure} Images/Floors_spanning_in_one_direction.jpg\n",
+    "--- \n",
+    "scale: 50%\n",
+    "---\n",
+    "Rules of thumb for thickness of cast in-situ floors, spanning in one direction (after: Constructieleer Gewapend Beton, 2008)\n",
+    "```\n",
+    "\n",
+    "For the support conditions shown in the figure above, the following approximation for effective floor height $d$ can be used:  \n",
+    "(mind that $d$ is not the floor thickness, but the effective height, similar to figure 10.6!)\n",
+    "\n",
+    "For $L_{eff} \\le 7$ m:  \n",
+    "- case (a): $d = L_{eff}/25$  \n",
+    "- case (b): $d = L_{eff}/32$  \n",
+    "- case (c): $d = L_{eff}/35$  \n",
+    "\n",
+    "For $L_{eff} > 7$ m:  \n",
+    "- case (a): $d = L_{eff}^2/175$  \n",
+    "- case (b): $d = L_{eff}^2/225$  \n",
+    "- case (c): $d = L_{eff}^2/245$  \n",
+    "\n",
+    "For floors that are spanning in **two** directions, either supported by beams, walls or columns, slightly different effective height $d$ equations can be used for a first approximation:\n",
+    "\n",
+    "For $L_{eff} \\le 7$ m:  \n",
+    "- edge or corner floor field: $d = L_{eff}/28$  \n",
+    "- middle floor field (surrounded by other fields): $d = L_{eff}/31$  \n",
+    "\n",
+    "For $L_{eff} > 7$ m:  \n",
+    "- edge or corner floor field: $d = L_{eff}^2/195$  \n",
+    "- middle floor field (surrounded by other fields): $d = L_{eff}^2/215$  \n",
+    "\n",
+    "For practical reasons the same floor thickness is often used throughout the whole floor area, unless much material can be saved by making the distinction. The latter is the case e.g. in large industrial floors with many intermediate supports in all directions.\n"
    ]
   }
  ],
