--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -26,11 +26,11 @@
     "Single span (beam on two support points, case a)  \n",
     "$L = 2$ to $20$ m  \n",
     "$h = 200$ to $2000$ mm  \n",
-    "$h = L/12$ to $L/8$  \n",
+    "$h = L/12$ to $L/8$ \\approx $L/10$  \n",
     "$b = h/3$ to $h/2$  \n",
     "\n",
     "Multiple spans (continuous beam on 3 support points, case b)  \n",
-    "$h = L/15$ to $L/10$  \n",
+    "$h = L/15$ to $L/10$  \\approx $L/12.5$  \n",
     "\n",
     "Multiple spans (continuous beam on 4 support points or more, case c)  \n",
     "$h = L/15$  \n",
@@ -117,7 +117,7 @@
     "\n",
     "For shear reinforcement, prestressed concrete and further verification: use Eurocode\n",
     "\n",
-    "### Floor thickness estimation (cast in-site)\n",
+    "### Floor thickness estimation (cast on-site)\n",
     "\n",
     "\n",
     "```{figure} Images/Floors_spanning_in_one_direction.jpg\n",
@@ -127,20 +127,19 @@
     "Rules of thumb for thickness of cast in-situ floors, spanning in one direction (after: Constructieleer Gewapend Beton, 2008)\n",
     "```\n",
     "\n",
-    "For the support conditions shown in the figure above, the following approximation for effective floor height $d$ can be used:  \n",
-    "(mind that $d$ is not the floor thickness, but the effective height, similar to figure 10.6!)\n",
+    "For the support conditions shown in the figure above, the following approximation for effective floor height $d$ can be used: (mind that $d$ is not the floor thickness, but the effective height, similar to figure 10.6!)\n",
     "\n",
     "For $L_{eff} \\le 7$ m:  \n",
-    "- case (a): $d = L_{eff}/25$  \n",
-    "- case (b): $d = L_{eff}/32$  \n",
-    "- case (c): $d = L_{eff}/35$  \n",
+    "- case ( a ): $d = L_{eff}/25$  \n",
+    "- case ( b ): $d = L_{eff}/32$  \n",
+    "- case ( c ): $d = L_{eff}/35$  \n",
     "\n",
     "For $L_{eff} > 7$ m:  \n",
-    "- case (a): $d = L_{eff}^2/175$  \n",
-    "- case (b): $d = L_{eff}^2/225$  \n",
-    "- case (c): $d = L_{eff}^2/245$  \n",
+    "- case ( a ): $d = L_{eff}^2/175$  \n",
+    "- case ( b ): $d = L_{eff}^2/225$  \n",
+    "- case ( c ): $d = L_{eff}^2/245$  \n",
     "\n",
-    "For floors that are spanning in **two** directions, either supported by beams, walls or columns, slightly different effective height $d$ equations can be used for a first approximation:\n",
+    "For floors that are spanning in **two** directions, either supported by beams, walls or columns, slightly different effective height equations should be used for a first approximation:\n",
     "\n",
     "For $L_{eff} \\le 7$ m:  \n",
     "- edge or corner floor field: $d = L_{eff}/28$  \n",
