--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -130,14 +130,14 @@
     "For the support conditions shown in the figure above, the following approximation for effective floor height $d$ can be used: (mind that $d$ is not the floor thickness, but the effective height, similar to figure 10.6!)\n",
     "\n",
     "For $L_{eff} \\le 7$ m:  \n",
-    "- case ( a ): $d = L_{eff}/25$  \n",
-    "- case ( b ): $d = L_{eff}/32$  \n",
-    "- case ( c ): $d = L_{eff}/35$  \n",
+    "- case (a): $d = L_{eff}/25$  \n",
+    "- case (b): $d = L_{eff}/32$  \n",
+    "- case \\(c): $d = L_{eff}/35$  \n",
     "\n",
     "For $L_{eff} > 7$ m:  \n",
-    "- case ( a ): $d = L_{eff}^2/175$  \n",
-    "- case ( b ): $d = L_{eff}^2/225$  \n",
-    "- case ( c ): $d = L_{eff}^2/245$  \n",
+    "- case (a): $d = L_{eff}^2/175$  \n",
+    "- case (b): $d = L_{eff}^2/225$  \n",
+    "- case \\(c): $d = L_{eff}^2/245$  \n",
     "\n",
     "For floors that are spanning in **two** directions, either supported by beams, walls or columns, slightly different effective height equations should be used for a first approximation:\n",
     "\n",
