--- a/book/design/concrete/C02_rules_of_thumb.ipynb
+++ b/book/design/concrete/C02_rules_of_thumb.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "(concrete_rules_of_thumb)=\n",
-    "## Rules of thumb\n",
+    "## Concrete - rules of thumb\n",
     "These 'rules of thumb' (Dutch: 'vuistregels') are to be seen as a quick way to estimate dimensions of structural members, based on span $L$ and/or center-to-center spacing $s$. These *estimated* dimensions should only serve as input for an early design stage calculation (e.g. first check of capacity or deformation), after which you will use more advanced design rules (e.g. Eurocode) for a more accurate calculation. Mind that you should *not* use them the other way around, as if the rules of thumb were some law that should be respected. They are just meant to get your design started.\n",
     "\n",
     "### Beam dimensions\n",
