--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "(structural_safety)=\n",
     "# Structural safety\n",
     "\n",
     "```{Note}\n",
@@ -54,8 +55,10 @@
     "$$\n",
     "```\n",
     "\n",
+    "\n",
+    "\n",
     "## Effect vs Resistance\n",
-    "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the unity check {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
+    "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the *unity check* {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
     "\n",
     "$$\n",
     "\\frac{E_d}{R_d} \\leq 1\n",
@@ -86,40 +89,69 @@
     ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
     "\n",
     "\n",
-    "## Reliability index\n",
+    "## Reliability index $\\beta$\n",
+    "The annual probability of failure $P_{f;a}$ and the annual reliability index $\\beta_{a}$ are used in the Eurocode as the two standard metrics to express structural reliability in the semi-probabilistic approach. The index $a$ (annum) is often left out, since variable loads are represented by the probability distributions of their *yearly* extreme values. The table below provides the values for both metrics:\n",
     "\n",
-    "The \"safety distance\" should somehow be numerically linked to the accepted level of failure probability. Understandably, the higher the standard deviation of either or both variables $E$ and $R$, the higher the safety distance should be to achieve the same level of reliabilty. For example, a safety margin of 1 MPa between $E_d$ and $R_d$ does mean less safety for a material with a standard deviation $σ_M$ = 100 MPa than it does for a material with a standard deviation $σ_M$ = 10 MPa. To this end, the reliability index β is defined as a function of the spread of the variables $E$ and $R$. First, an auxilary reliability function {eq}`reliability` is defined. Furthermore, we also need equations for the mean {eq}`mu_Z` and standard deviation {eq}`sigma_Z` of the reliability $Z$.\n",
+    "```{list-table} Relation between failure probability $P_{f}$ and reliability index $\\beta$ (prNEN-EN-1990 2021, table C.2).\n",
+    ":header-rows: 1\n",
+    ":name: Pf_vs_beta\n",
     "\n",
-    "$$\n",
-    "Z = R - E\n",
-    "$$(reliability)\n",
-    "\n",
-    "$$\n",
-    "\\mu_Z = \\mu_R - \\mu_E\n",
-    "$$(mu_Z)\n",
-    "\n",
-    "$$\n",
-    "\\sigma_Z = \\sqrt{\\sigma_R^2 + \\sigma_E^2}\n",
-    "$$(sigma_Z)\n",
-    "\n",
-    "The reliability index of this particular example can now be calculated as the proportion between the average and the standard deviation as in equation {eq}`beta`. For our particular example β = 6.8. Using the table below, we can conclude that with this value of β the probability of failure is very small: $P_f$ ≪ 10−8, and that we could have done with a higher $E$ or smaller $R$ or both and still be okay.\n",
-    "\n",
-    "$$\n",
-    "\\beta = \\frac{\\mu_z}{\\sigma_z}\n",
-    "$$(beta)\n",
-    "\n",
-    "```{figure} Images/failure_prob_rel.png\n",
-    "---\n",
-    "---\n",
-    "Relation between failure probability Pf and reliability index β\n",
-    "(prNEN-EN-1990 2021, table C.2)\n",
+    "* - $P_f$\n",
+    "  - $\\beta$\n",
+    "* - $10^{-1}$\n",
+    "  - 1.28\n",
+    "* - $10^{-2}$\n",
+    "  - 2.33\n",
+    "* - $10^{-3}$\n",
+    "  - 3.09\n",
+    "* - $10^{-4}$\n",
+    "  - 3.72\n",
+    "* - $10^{-5}$\n",
+    "  - 4.26\n",
+    "* - $10^{-6}$\n",
+    "  - 4.75\n",
+    "* - $10^{-7}$\n",
+    "  - 5.2\n",
+    "* - $10^{-8}$\n",
+    "  - 5.61\n",
     "```\n",
     "\n",
+    "To connect the meaning of the reliability index $\\beta$ to a simple structural example, let's look at the figure below:\n",
+    "\n",
+    "```{figure} Images/E_R_curves_highgamma_uc0.81_Z.png\n",
+    "--- \n",
+    "scale: 60%\n",
+    "name: E_R_Z_curves\n",
+    "---\n",
+    "Effects vs. Resistance and reliability function Z\n",
+    "```\n",
+    "We see in red a PDF curve R which represents the probability that the Resistance (= strength) of a fictitious structure has a given value. We also see a blue PDF curve E (= Effects = loads) of the load on our structure. The green curve Z represents the difference of the E and R curves:\n",
+    "\n",
+    "$$\n",
+    "Z=R-E\n",
+    "$$\n",
+    "\n",
+    "with  \n",
+    "\n",
+    "$$\n",
+    "\\mu_Z=\\mu_R-\\mu_E\n",
+    "$$\n",
+    "\n",
+    "and  \n",
+    "\n",
+    "$$\n",
+    "\\sigma_Z=\\sqrt{\\sigma_R^2-\\sigma_E^2}\n",
+    "$$\n",
+    "\n",
+    "The reliability index $\\beta$ of the structure can now be calculated from the PDFs of E and R:\n",
+    "\n",
+    "$$\n",
+    "\\beta=\\frac{\\mu_Z}{\\sigma_Z}\n",
+    "$$\n",
+    "\n",
+    "\n",
     "## Python implementation\n",
-    "\n",
-    "If you are interested in the background of the functions, implemented in python to obtain fast numerical results, you can find those in the [safety calculation examples](../../calculation_examples/safety/effect_vs_resistance.ipynb). A calculation example is provided at the bottom of this page.\n",
-    "\n",
-    "\n",
+    "If you want to see some numerical examples using the concepts of safety, you can find these under {ref} `unity_check` and {ref}`reliability_index_example`.\n",
     "\n",
     "[^1]: Schneider and Vrouwenvelder (2017, equation 4.44)"
    ]
